--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -64,7 +64,7 @@
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="60"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/teal_200"
         android:textSize="24dp" />
 
     <EditText
